# meal-recommender

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  main.py
app/api/: dependencies.py  routes.py
app/core/: __init__.py  cache.py  config.py  exceptions.py  logging_config.py
app/models/: __init__.py  domain.py  enums.py  input.py  output.py
app/services/: README.md  cp_sat_solver.py  db_loader.py  missing_ingredient.py  objective.py  recommend.py  shopping_list.py  unit_converter.py
app/utils/: __init__.py  date_utils.py  nutrition.py
data/: Dish.json  DishIngredient.json  ingredient.json
docs/: 00-overview.md  01-models.md  02-core.md  03-services-data.md  04-services-solver.md  05-utils.md  06-api.md  07-replan.md  08-deploy-render.md  09-unit-conversion.md  README.md
mock_data/: dish_ingredients.json  dishes.json  ingredients.json  sample_01_simple.json  sample_02_weight_loss.json  sample_03_weight_gain.json  sample_04_replan_with_locks.json  sample_05_recent_meal_log.json  sample_failed_response.json  sample_replan_request.json  sample_replan_response.json  sample_request.json
mock_data/test_samples/: 01_simple_1day.json  02_weight_loss_3days.json  03_weight_gain_5days.json  04_replan_with_locks.json  05_recent_meal_log.json  06_should_fail_low_calorie.json  07_adult_male_test_suite.json
scripts/: demo.py
tests/: conftest.py
tests/fixtures/: sample_dish_ingredients.json  sample_dishes.json  sample_ingredients.json  sample_input.json
tests/unit/: test_nutrition.py  (+4 more)
(+6 files in other folders)
